# cam_window

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_ANALYSIS.md  CamAI_Project.txt  PACKAGING_GUIDE.md  camera.py  config_detector.json  detect.py  mainwindow.py  patch_ui_1.py  patch_ui_2.py  patch_ui_3.py  patch_ui_5.py  patch_ui_6.py  pyproject.toml  requirements-gpu.txt  requirements-lite.txt  requirements.txt  roi_dialog.py  rule.md  settings.json  settings_dialog.py  test.py  todo.md  unit_manager.py  web_socket.py
.github/workflows/: build.yml  main.yml  test1.yml
.qtcreator/Python_3_11_0venv/: pyvenv.cfg
.qtcreator/Python_3_11_0venv/Scripts/: activate  activate.bat
tests/: conftest.py  test_mainwindow_logic.py  test_unit_manager.py
