[project]
name = "CamAI Ford"
version = "0.1.0"
description = "Real-time AI-powered camera monitoring system for parking slot detection"
authors = [
    {name = "Development Team", email = "dev@camai-ford.local"}
]
dependencies = [
    "PySide6>=6.10.2",
    "opencv-python>=4.13.0",
    "ultralytics>=8.4.19",
    "torch>=2.10.0",
    "numpy>=2.2.6",
    "websockets>=16.0"
]
requires-python = ">=3.10"
readme = "../README.md"
license = {text = "MIT"}

[tool.pyside6-project]
files = ["../camera.py", "../detect.py", "../web_socket.py", "best.pt", "camera.py", "detect.py", "mainwindow.py", "web_socket.py"]

[project.urls]
Homepage = "https://github.com/camai-ford/camai-ford-project"
Documentation = "../README.md"
Repository = "https://github.com/camai-ford/camai-ford-project.git"
Issues = "https://github.com/camai-ford/camai-ford-project/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
